# mbulib

./: .travis.yml  Cargo.toml  README.md
benches/: ngslib_benches.rs  rqmap_benches.rs
src/: append_record.rs  errors.rs  lib.rs  library_strategy.rs  ngslibrary.rs  rqmap.rs  scaffold_dict.rs
src/bam/: header.rs  mod.rs  sort.rs
src/io/: genomic_loci.rs  into_annotmap.rs  mod.rs
src/loci/: genomic_loci.rs  into_annotmap.rs  locus.rs  mod.rs
src/locus/: from_read.rs  from_rec.rs  mod.rs  positions.rs  prime.rs  shift.rs
src/reads/: as_annotmap.rs  locuslike.rs  mod.rs
src/utility/: header.rs  mod.rs  scaffold_dict.rs  sort.rs
test/: aln.mini.bam  aln.mini.bam.bai  hs.pe.test.bam  hs.pe.test.bam.bai  test_hg19_100proms.bed
