[package]
name = "rqmap"
version = "0.1.0-alpha.1"
authors = ["Matt Lawlor <matt.a.lawlor@gmail.com>"]
edition = "2018"

[dependencies]
bio = "0.25.0"
bio-types = "0.4.0"
rust-htslib = "0.22.0"
itertools="*"
quick-error="1.2.2"
linear-map="1.2.0"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "ngslib_benches"
harness = false
